--- a/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
+++ b/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
@@ -11,6 +11,11 @@ The VTEX IO CLI will help you during your development process by allowing you to
 
 ---
 
+Test HTML tag: <a href="https://developers.vtex.com/docs/guides/faststore/-2-setting-up-the-project">Starting a new FastStore project</a> tutorial.
+
+Testing new Github Action: [Starting a new FastStore project](https://developers.vtex.com/docs/guides/faststore/-2-setting-up-the-project) tutorial.
+
+
 ## Before you begin
 
 Before you proceed with setting up the Headless CMS in your account, please ensure the following:
