--- a/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
+++ b/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
@@ -6,7 +6,9 @@ seeAlso:
   - "/docs/guides/vtex-io-documentation-vtex-io-cli-installation-and-command-reference"
 ---
 
-I shouldn't write faststore, at master data
+I shouldn't write faststore, at master data.
+
+Open the administrative panel.
 
 Let's set up all the tools you need to integrate the Headless CMS with your FastStore project. First, we will install the **VTEX IO CLI**.
 The VTEX IO CLI will help you during your development process by allowing you to perform different actions in the VTEX platform. In the following, we will install and configure the Headless CMS app in your VTEX account.
