--- a/docs/faststore/docs/customization/building-sections/overview.mdx
+++ b/docs/faststore/docs/customization/building-sections/overview.mdx
@@ -37,11 +37,11 @@ Overrides are suitable for making changes in component behavior or replacing com
 
 ### Manage Analytics
 
-The [ProductCard](https://developers.vtex.com/docs/guides/faststore/molecules-product-card) and [SearchInput](https://developers.vtex.com/docs/guides/faststore/organisms-search-input) components are FastStore components that need to be customizaed with careful, since they can affect in triggering analytics events.
-To understand how these components while customize them, refer to the [List of native sections and overridable components](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections).
+The [`__experimentalProductCard`](https://developers.vtex.com/docs/guides/faststore/molecules-product-card) and [`SearchInput`](https://developers.vtex.com/docs/guides/faststore/organisms-search-input) components are FastStore components that need to be customized carefully, since they can affect the triggering of analytics events.
+To understand how these components can affect store analytics while customizing them, refer to the [List of native sections and overridable components](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections).
 
 
-</Steps>
+</Steps
 
 ## API extension
 
