--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -11,7 +11,7 @@ For example, the [Hero](https://developers.vtex.com/docs/guides/faststore/organi
 
 ## Considerations while customizing default components
 
-Customizing `__experimentalProductCard` and `SearchInput` can impact store analytics. These components collect data for your store analytics dashboard. Prioritize maintaining tracking functionality.
+Customizing `__experimentalProductCard` and `SearchInput` can impact store analytics. These components collect data for your store analytics. Prioritize maintaining tracking functionality.
 
 ### `__experimentalProductCard`
 
