--- a/docs/faststore/docs/customization/using-themes/overview.mdx
+++ b/docs/faststore/docs/customization/using-themes/overview.mdx
@@ -118,7 +118,7 @@ Global design tokens are parameters that affect all UI look 'n' feel. They are t
 
 ---
 
-## Next steps
+## Learn more
 
 <Flex>
 <WhatsNextCard
