--- a/docs/faststore/docs/customization/building-sections/overview.mdx
+++ b/docs/faststore/docs/customization/building-sections/overview.mdx
@@ -37,7 +37,7 @@ Overrides are suitable for making changes in component behavior or replacing com
 
 ### Manage Analytics
 
-The [`__experimentalProductCard`](https://developers.vtex.com/docs/guides/faststore/molecules-product-card) and [`SearchInput`](https://developers.vtex.com/docs/guides/faststore/organisms-search-input) components are FastStore components that need to be customized carefully, since they can affect the triggering of analytics events.
+The [`__experimentalProductCard`](https://developers.vtex.com/docs/guides/faststore/molecules-product-card) and [`SearchInput`](https://developers.vtex.com/docs/guides/faststore/organisms-search-input) components are FastStore components that need to be customized carefully, since they can affect the triggering of events and impact your [Intelligent Search Analytics](https://help.vtex.com/en/tutorial/analytics--6qRMAHDL9hvv3oE0bh8mA1) store report.
 To understand how these components can affect store analytics while customizing them, refer to the [List of native sections and overridable components](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections).
 
 
