Apply code review suggestions

--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -10,7 +10,7 @@ For example, the [Hero](https://developers.vtex.com/docs/guides/faststore/organi
 
 ## Considerations while customizing default components
 
-Customizing `__experimentalProductCard` and `SearchInput` can impact your [Intelligent Search Analytics](https://help.vtex.com/en/tutorial/analytics--6qRMAHDL9hvv3oE0bh8mA1) store report. These components collect data for your store analytics. Prioritize maintaining tracking functionality.
+Overriding certain default FastStore components can affect the store’s behavior. For example, customizing `__experimentalProductCard` and `SearchInput` can impact your [Intelligent Search Analytics](https://help.vtex.com/en/tutorial/analytics--6qRMAHDL9hvv3oE0bh8mA1) store report. These components collect data for your store analytics. Prioritize maintaining tracking functionality.
 
 ### `__experimentalProductCard`
 
