--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -10,7 +10,9 @@ For example, the [Hero](https://developers.vtex.com/docs/guides/faststore/organi
 
 ## Considerations while customizing default components
 
-Overriding certain FastStore components can affect the store’s behavior. For example, customizing `__experimentalProductCard` and `SearchInput` can impact your [Intelligent Search Analytics](https://help.vtex.com/en/tutorial/analytics--6qRMAHDL9hvv3oE0bh8mA1) store report. These components collect data for your store analytics. Prioritize maintaining tracking functionality, as these components, `__experimentalProductCard` and `SearchInput`, collect data for your store analytics.
+Overriding certain FastStore components can affect the store’s behavior. For example, customizing `__experimentalProductCard` and `SearchInput` can impact your store's analytics tracking. These components collect data for the [Intelligent Search Analytics](https://help.vtex.com/en/tutorial/analytics--6qRMAHDL9hvv3oE0bh8mA1), so it's crucial to maintain their tracking functionality when making modifications.
+
+See below how customizing certain components can affect your store.
 
 ### `__experimentalProductCard`
 
@@ -19,7 +21,7 @@ Overriding certain FastStore components can affect the store’s behavior. For e
 To ensure that click events on this component continue to be recorded after overriding the component, use the [`useProductLink_unstable` hook](https://developers.vtex.com/docs/guides/faststore/building-sections-experimental-exports-hooks-and-components#hooks). 
 For more information on how to use the `useProductLink_unstable` hook and how to add it to the component, see the [Experimental exports - Hooks and Components](https://developers.vtex.com/docs/guides/faststore/building-sections-experimental-exports-hooks-and-components). 
 
-> ❕You can also refer to the [ProductCard](https://github.com/vtex/faststore/blob/91d2669f5d390da4a3889f9c12948290c213866d/packages/core/src/components/product/ProductCard/ProductCard.tsx#L88) default implementation for more details.
+> ℹ️ For reference, view the default [ProductCard](https://github.com/vtex/faststore/blob/91d2669f5d390da4a3889f9c12948290c213866d/packages/core/src/components/product/ProductCard/ProductCard.tsx#L88) implementation on GitHub.
 
 ### `SearchInput`
 
@@ -30,7 +32,8 @@ To maintain this functionality, you'll need to ensure that search events are log
 
 1. Add the following code to the custom component you are overriding (based on the default [`SearchInput`](https://github.com/vtex/faststore/blob/611283638dc01f55a65d0b5fd01e4a0163d53f4b/packages/core/src/components/search/SearchInput/SearchInput.tsx#L46) component):
 
-  ```tsx const sendAnalytics = async (term: string) => {
+  ```tsx 
+  const sendAnalytics = async (term: string) => {
     import('@faststore/sdk').then(({ sendAnalyticsEvent }) => {
       sendAnalyticsEvent<SearchEvent>({
         name: 'search',
