fix closing tag for <Steps>

--- a/docs/faststore/docs/customization/building-sections/overview.mdx
+++ b/docs/faststore/docs/customization/building-sections/overview.mdx
@@ -41,7 +41,7 @@ The [`__experimentalProductCard`](https://developers.vtex.com/docs/guides/fastst
 To understand how these components can affect store analytics while customizing them, refer to the [List of native sections and overridable components](https://developers.vtex.com/docs/guides/faststore/building-sections-list-of-native-sections).
 
 
-</Steps
+</Steps>
 
 ## API extension
 
