--- a/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
+++ b/docs/faststore/docs/customization/building-sections/list-of-native-sections.mdx
@@ -45,7 +45,8 @@ To maintain this functionality, you'll need to ensure that search events are log
 
 2. Within the custom component, make sure the `sendAnalytics` function is called whenever a user enters a search term. The following code is an example calling the `sendAnalytics` function based on the [FastStore default implementation](https://github.com/vtex/faststore/blob/611283638dc01f55a65d0b5fd01e4a0163d53f4b/packages/core/src/components/search/SearchInput/SearchInput.tsx#L85). Adjust the code to suit your specific context as needed.
 
-  ```tsx const onSearchSelection: SearchProviderContextValue['onSearchSelection'] = (
+  ```tsx 
+  const onSearchSelection: SearchProviderContextValue['onSearchSelection'] = (
         term,
         path
       ) => {
@@ -55,7 +56,6 @@ To maintain this functionality, you'll need to ensure that search events are log
         setSearchQuery(term)
       }
   ```
-3. Open the terminal and run `yarn dev` to sync the changes you made.
 
 ## FastStore Native Sections
 
