Ideia: add use cases section to content types

--- a/docs/faststore/docs/headless-cms/use-cases/creating-an-institutional-page-with-content-types-1.mdx
+++ b/docs/faststore/docs/headless-cms/use-cases/creating-an-institutional-page-with-content-types-1.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Creating an institutional page with Content types"
+title: "Creating an institutional page with Content Types"
 ---
 
-Content types are templates that structure your documents. They can be pages, publications, articles, events, products, and any other type of content that you want to insert into your project. You can also use them in the CMS to create an institutional page.
+Content Types are templates that structure your documents. They can be pages, publications, articles, events, products, and any other type of content that you want to insert into your project. You can also use them in the CMS to create an institutional page.
 
 To create an institutional page, follow these instructions.
 
 ## Instructions
 
-1. Define the components of your page. In the example below, we use the `www.vtex.com` page and its title, partners, highlights, and carousel components.
+1. Define the components of your page. In the example below, we use the [VTEX website](https://vtex.com/) and its title, partners, highlights, and carousel components.
 
     ![](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@main/images/creating-an-institutional-page-with-content-types-1-0.png)
 
