Fix(index.tsx): code block

--- a/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
@@ -80,7 +80,11 @@ it, refer to this [release note](https://github.com/vtex/faststore/releases/tag/
     ```tsx index.tsx
     import ProductDetailsWithCustomButton from "./sections/ProductDetailsWithCustomButton";
 
-    export default { ProductDetailsWithCustomButton };
+    const sections = {
+
+    ProductDetails: ProductDetailsWithCustomButton
+    };
+    export default sections;
 
     ```
 
