Add: new step about the localhost server

--- a/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/component-props.mdx
@@ -89,7 +89,8 @@ it, refer to this [release note](https://github.com/vtex/faststore/releases/tag/
 
     ```
 
-3. Run `yarn dev` to sync the new custom component to your store preview. You'll see a smaller button than the initial one, and the cart icon positioned on the right side.
+3. Open the terminal, and run `yarn dev` to sync the new custom component to your store preview. 
+4. Open the localhost available after running `yarn dev`. You'll see a smaller button than the initial one, and the cart icon positioned on the right side.
 
 ### Step 3 - Publishing your changes
 
