--- a/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
@@ -103,8 +103,10 @@ In this example, we are overriding the `BuyButton` component in the `ProductDeta
 
 ### Step 5 - Publishing your changes
 
-If your changes are working in the development mode and you want to publish them, follow the steps below:
+If your changes are working locally and you want to publish them in production, follow the steps below:
 
-1. Go to the Headless CMS in the VTEX Admin.
-2. Click on a PDP page.
-3. Click `Publish` to make the new button available on the production store.
+1. Publish your branch with the custom components files.
+2. Open a pull request in the store's GitHub repository.
+3. Review the pull request
+4. Merge the changes from this branch to the `main` one and the new component will be available in the live store.
+
