--- a/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
+++ b/docs/faststore/docs/customization/building-sections/overrides/native-component.mdx
@@ -33,7 +33,7 @@ it, refer to this [release note](https://github.com/vtex/faststore/releases/tag/
 
 ### Step 2 - Create your custom component
 
-1. Inside the `components` folder, create a file named `CustomBuyButton.tsx`. _If you haven't created the `components` folder yet, see the [Setting up the overrides folder](https://developers.vtex.com/docs/guides/faststore/building-sections-overriding-components-and-props#step-1---setting-up-the-overrides-folder) step._
+1. Inside the `components` folder, create a file named `CustomBuyButton.tsx`.
 
     <Tabs items={['macOS and Linux', 'Windows']}>
     <Tab>
@@ -100,6 +100,13 @@ In this example, we are overriding the `BuyButton` component in the `ProductDeta
         export default { ProductDetailsWithCustomButton };
 
     ```
+
+3. Open the terminal, and run `yarn dev` to sync the new custom component to your store preview. 
+4. Open the localhost available after running `yarn dev`. 
+5. Open a PDP and click `New BuyButton`. An alert with `Hello user` message will appear.
+
+![custom-buybutton-with-alert](https://vtexhelp.vtexassets.com/assets/docs/src/custom-buybutton___85eef62d606c75d7d9a206635979a050.gif)
+
 
 ### Step 5 - Publishing your changes
 
