--- a/docs/guides/Master-Data/v1-guides/uploading-files-to-master-data.mdx
+++ b/docs/guides/Master-Data/v1-guides/uploading-files-to-master-data.mdx
@@ -22,7 +22,7 @@ In this guide, you will learn how to upload files to Master Data v1 by following
 In this step, you will create a new [data entity](https://help.vtex.com/en/tutorial/creating-data-entity--tutorials_1265) to represent a collection of files. This entity will include a file-type field dedicated to storing files.
 
 1. Access the [DynamicStorage](https://help.vtex.com/en/tutorial/how-can-i-create-a-field-in-master-data--frequentlyAskedQuestions_1829#dynamic-storage) at `https://{accountName}.ds.vtexcrm.com.br`.
-   > _Remember to replace the value between curly braces with your [account name](https://help.vtex.com/tutorial/what-is-an-account-name--i0mIGLcg3QyEy8OCicEoC)._
+   > Remember to replace the value between curly braces with your [account name](https://help.vtex.com/tutorial/what-is-an-account-name--i0mIGLcg3QyEy8OCicEoC).
 2. Click **Data Entities** in the top bar.
 3. Click **Add New**.
 4. In the **Acronym** field, enter a two-letter acronym for the data entity you are creating.
@@ -35,7 +35,7 @@ In this step, you will create a new [data entity](https://help.vtex.com/en/tutor
 11. On **Custom field type settings**, select the **Max size per file** according to your needs. This sets the maximum file size that can be uploaded to this field.
 12. Click **Save**.
 
-<video src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/creating-a-new-data-entity.mp4" controls autoplay></video>
+<video width="100%" src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/creating-a-new-data-entity.mp4" controls autoplay></video>
 
 ### Step 2 - Publishing and indexing the data entity
 
@@ -47,7 +47,7 @@ As the next step, you will now publish and index your newly created data entity.
 
 > ⚠️ Wait for the data entity to be fully indexed. This may take from 30 minutes to one hour. During this time, do not make any changes to the data entity or its fields. Note that there is currently no interface to monitor the progress of indexation. Instead, you can periodically check the status of the entity.
 
-<video src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/publishing-and-indexing.mp4" controls autoplay></video>
+<video width="100%" src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/publishing-and-indexing.mp4" controls autoplay></video>
 
 ### Step 3 - Creating a Master Data form
 
@@ -67,12 +67,12 @@ Once your data entity is successfully indexed, you can proceed to [create a form
 11. Select the data entity previously created from the column **Campos disponíveis**. Then, drag and drop it into the column **Campos da coluna 1**.
 12. Click **Save**.
 
-<video src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/creating-a-master-data-form.mp4" controls autoplay></video>
+<video width="100%" src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/creating-a-master-data-form.mp4" controls autoplay></video>
 
 ### Step 4 - Uploading the file
 
 Now, access the [Master Data CRM](https://help.vtex.com/en/tutorial/how-can-i-create-a-field-in-master-data--frequentlyAskedQuestions_1829#crm) at `https://{account}.vtexcrm.com.br` to upload your files.
-   > _Remember to replace the value between curly braces with your [account name](https://help.vtex.com/tutorial/what-is-an-account-name--i0mIGLcg3QyEy8OCicEoC)._
+   > Remember to replace the value between curly braces with your [account name](https://help.vtex.com/tutorial/what-is-an-account-name--i0mIGLcg3QyEy8OCicEoC).
 
 By now, when accessing the Master Data CRM, you should see a new tab with the name of the form you just created. If that's not the case, reload the page.
 
@@ -83,7 +83,7 @@ By now, when accessing the Master Data CRM, you should see a new tab with the na
 3. Click the **Upload a File** button. Choose your file and click **Open**.
 4. After the upload, click **Save**.
 
-<video src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/uploading-a-file.mp4" controls autoplay></video>
+<video width="100%" src="https://raw.githubusercontent.com/vtexdocs/dev-portal-content/main/docs/guides/Master-Data/v1-guides/uploading-a-file.mp4" controls autoplay></video>
 
 ### Step 5 - Accessing the file
 
