fix property name: from 'version' to 'status'

--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -53,7 +53,7 @@ Notice that each page created with the Headless CMS is related to a specific URL
 | **Name**                               | Identifies a given page. This name is not available elsewhere and is used only internally in the Headless CMS for identification purposes.                                                                                                                                  |
 | **Type** *(a.k.a., Content Type)*      | Determines the nature of a page. For example, the **Type** can be a Landing Page, a Product Listing Page (PLP), a Product Details Page (PDP), etc. You, as a developer, are the one responsible for defining which content types will be available for the editors of your store. |
 | **Last modified**                      | Indicates the last time a given page was edited.                                                                                                                                                                                                                                 |
-| **Version**                            | Identifies the state of a page, if it's `draft` or `published`. Notice that editors can have more than one version of the same page with distinct settings and content.                                                                                           |
+| **Status**                            | Identifies the state of a page: <ul><li><code>Published</code>: Pages that are published and already available in the live store.</li> <li><code>Draft</code>: Pages that are in draft with work in progress and haven't been published yet.</li></ul>                            |
 
 ### Content Types
 
