Fix button name: from 'Create new' to 'Create Document'

--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -57,7 +57,7 @@ Notice that each page created with the Headless CMS is related to a specific URL
 
 ### Content Types
 
-Once editors click on **Create New** in the Headless CMS interface, they'll be able to select a type from a list of **Content Types** that you, the developer, established.
+Once editors click on **Create Document** in the Headless CMS interface, they'll be able to select a type from a list of **Content Types** that you, the developer, established.
 
 ![CMS Settings](https://vtexhelp.vtexassets.com/assets/docs/src/headless-cms-projects___5472a0870899c945ece289905ac92758.png)
 
