fix content duplication

--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -47,7 +47,7 @@ If yes, proceed to check the [next requirement](https://developers.vtex.com/docs
     vtex install vtex.admin-cms-graphql vtex.admin-cms-graphql-rc
     ```
 
-Once the app and its dependencies are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins). If not, install them by following the instructions in [Installing the Headless CMS app](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#installing-the-headless-cms-app-and-its-dependencies).
+Once the app and its dependencies are installed, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins).
 
 ## Install Headless CMS plugins
 
