--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -29,7 +29,7 @@ To check whether you have them installed, follow the instructions below:
 
 2. Run `vtex ls` to list all the installed apps in your account.
 3. Check if the `vtex.admin-cms@1.x`, `vtex.admin-cms-graphql`, and `vtex.admin-cms-graphql-rc` are in the list.
-If yes, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins). If not, install them by following the instructions in [Installing the Headless CMS app](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#installing-the-headless-cms-app-and-its-dependencies).
+If yes, proceed to check the [next requirement](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-plugins). If not, continue following these instructions.
 
 4. After logging into your account, install `vtex.admin-cms@1.x` by running the following command:
 
