--- a/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
+++ b/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
@@ -19,15 +19,15 @@ Before you proceed with setting up the Headless CMS in your account, make sure y
 
 ### Install the Headless CMS, its dependencies and plugins
 
-Ensure that you have installed the `vtex.admin-cms@1.x`, its dependencies and plugins as described in the [FastStore requirements](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-and-its-dependencies).
+Make sure that you have installed the `vtex.admin-cms@1.x`, its dependencies and plugins as described in the [FastStore requirements](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements#install-headless-cms-and-its-dependencies).
 
-### Successful FastStore Onboarding
+### Have a FastStore project
 
-Make sure the FastStore Onboarding process has been completed successfully through the FastStore WebOps . For detailed instructions, please refer to the [Starting a new FastStore project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project) tutorial.
+Make sure you have a FastStore project after completing the process through the FastStore WebOps. For detailed instructions, please refer to the [Starting a new FastStore project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project) guide.
 
-### Installation of VTEX IO CLI
+### Install the VTEX IO CLI
 
-Ensure that you have installed the VTEX IO CLI on your machine. This CLI is required to install the Headless CMS plugins and CMS dependencies. For more information, please refer to the [Installing VTEX IO CLI](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-install) guide.
+Make sure that you have installed the VTEX IO CLI on your machine. This CLI is required to install the Headless CMS plugins and CMS dependencies. For more information, please refer to the [Installing VTEX IO CLI](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-install) guide.
 
 </Steps>
 
