--- a/docs/faststore/docs/getting-started/requirements.mdx
+++ b/docs/faststore/docs/getting-started/requirements.mdx
@@ -9,10 +9,10 @@ updatedAt: "2024-06-03T11:30:00.813Z"
 
 For more information, please refer to [this guide](https://developers.vtex.com/vtex-developer-docs/docs/vtex-io-documentation-vtex-io-cli-installation-and-command-reference).
 
-## Install the Headless CMS and its dependencies
+## Install Headless CMS and its dependencies
 
-The [Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During the [Onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview),
-the integration between your project and the Headless CMS is initiated.
+[Headless CMS](https://developers.vtex.com/docs/guides/faststore/headless-cms-overview) is the content management solution for FastStore projects. During the [Onboarding](https://developers.vtex.com/docs/guides/faststore/getting-started-overview),
+the integration between your project and Headless CMS is initiated.
 
 To prevent content duplication that could cause build failures during Onboarding, it is important to confirm the installation of the following apps in your account: 
 - `vtex.admin-cms@1.x`
@@ -41,7 +41,7 @@ If yes, proceed to check the [next requirement](https://developers.vtex.com/docs
 
     ![installation-message](https://vtexhelp.vtexassets.com/assets/docs/src/cms-install___7144afabf5a895ba92905926808507b2.png)
 
-5. Install the Headless CMS dependencies by running the following command:
+5. Install Headless CMS dependencies by running the following command:
 
     ```bash
     vtex install vtex.admin-cms-graphql vtex.admin-cms-graphql-rc
@@ -51,7 +51,7 @@ Once the app and its dependencies are installed, proceed to check the [next requ
 
 ## Install Headless CMS plugins
 
-To ensure you won't get errors while running Headless CMS commands in the CLI, install the Headless CMS plugins by following these steps:
+To ensure you won't get errors while running Headless CMS commands in the CLI, install Headless CMS plugins by following these steps:
 
 1. Open the terminal and log in to your VTEX account using the VTEX IO CLI:
 
@@ -61,13 +61,13 @@ To ensure you won't get errors while running Headless CMS commands in the CLI, i
     vtex login {account}
     ```
 
-2. Install the Headless CMS plugin:
+2. Install Headless CMS plugins:
 
     ```bash
     vtex plugins install cms
     ```
 
-Now, check if the installation of the Headless CMS plugin was successful by running `vtex cms`.
+Now, check if the installation of Headless CMS plugins was successful by running `vtex cms`.
 
 ![success-vtex-cms-sync](https://vtexhelp.vtexassets.com/assets/docs/src/faststore-vtex-cms___460365970fb39c94e300b9fbd497e17e.png)
 
