Apply suggestions from code review
Co-authored-by: Carolina Menezes <60782333+carolinamenezes@users.noreply.github.com>

--- a/docs/faststore/docs/getting-started/3-faststore-cli.mdx
+++ b/docs/faststore/docs/getting-started/3-faststore-cli.mdx
@@ -6,7 +6,7 @@ The FastStore Command Line Interface (CLI) provides pre-configured scripts for s
 
 ## Before you begin
 
-To avoid errors while running the FastStore CLI `yarn faststore cms-sync` or `faststore cms-sync` commands, make sure to install the Headless CMS, its dependencies and plugins as described in the [FastStore requirements](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements).
+To ensure the FastStore CLI commands related to the Headless CMS run correctly, make sure to install the Headless CMS, its dependencies and plugins as described in the [FastStore requirements](https://developers.vtex.com/docs/guides/faststore/getting-started-requirements).
 
 ## Running FastStore CLI on the project
 
