Review hCMS paragraph: mentions about 'Projects' and WebOps

--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -43,10 +43,8 @@ To associate a role with the resources mentioned above, you can [create a custom
 
 Headless CMS is a headless content management system that allows users to store content in a decoupled data layer and deliver it as structured data to their FastStore project via an API.
 
-After successfully completing the [FastStore Onboarding process](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), the app will be installed in your VTEX account. To access it, go to the VTEX Admin and navigate to **Storefront > Headless CMS**.
-The CMS provides a list of all web pages created with it, which is initially empty but populates as editors create new pages.
-
-Notice that each page created with the Headless CMS is related to a specific URL and is distinguished by the following properties:
+After onboarding through [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), users can manage their FastStore project in VTEX Admin by navigating to **Storefront > Headless CMS** under the [Projects](https://help.vtex.com/tutorial/managing-projects--42IpDFqTVTESH8DCypJMPM) feature.
+Each project lists all web pages created within it, starting empty and filling as editors add new pages. Each page corresponds to a unique URL and is identified by the following properties:
 
 | Property name                          | Description                                                                                                                                                                                                                                                                      |
 | -------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
