--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -43,7 +43,7 @@ To associate a role with the resources mentioned above, you can [create a custom
 
 Headless CMS is a headless content management system that allows users to store content in a decoupled data layer and deliver it as structured data to their FastStore project via an API.
 
-After onboarding through [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), users can manage their FastStore project in VTEX Admin by navigating to **Storefront > Headless CMS** under the [Projects](https://help.vtex.com/tutorial/managing-projects--42IpDFqTVTESH8DCypJMPM) feature.
+After onboarding through [FastStore WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-overview), users can manage their FastStore project on VTEX Admin by navigating to **Storefront > Headless CMS** under the [Projects](https://help.vtex.com/tutorial/managing-projects--42IpDFqTVTESH8DCypJMPM) feature.
 Each project lists all web pages created within it, starting empty and filling as editors add new pages. Each page corresponds to a unique URL and is identified by the following properties:
 
 | Property name                          | Description                                                                                                                                                                                                                                                                      |
