Fix 'Before you begin'

--- a/docs/faststore/docs/headless-cms/overview.mdx
+++ b/docs/faststore/docs/headless-cms/overview.mdx
@@ -21,7 +21,7 @@ Ensure you have a VTEX account to set up the Headless CMS with a FastStore proje
 
 ### Set up your FastStore project
 
-If you do not have a FastStore project, refer to the [Setting up the project](https://developers.vtex.com/docs/guides/faststore/getting-started-2-setting-up-the-project) guide.
+If you do not have a FastStore project, refer to the [Starting a new FastStore project](https://developers.vtex.com/docs/guides/faststore/1-onboarding-starting-the-project) guide.
 
 ### Set up CMS resources with your VTEX user role
 
