--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -20,7 +20,7 @@ Make sure the `@faststore/cli` package from your project is updated to the lates
 1. Open your FastStore project code.
 2. Go to `faststore.config.js` file and add the `preact` flag in the `experimental` section:
 
-    ```json faststore.config.json mark="4"
+    ```json mark="4"
     experimental: {
         nodeVersion: 18,
         cypressVersion: 12,
