--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -18,7 +18,9 @@ Make sure the `@faststore/cli` package from your project is updated to the lates
 ## Instructions
 
 1. Open your FastStore project code.
-2. Go to `faststore.config.js` file and add the `preact` flag in the `experimental` section:
+2. Go to `discovery.config.js` file and add the `preact` flag in the `experimental` section:
+
+> The `faststore.config.js` file is the legacy filename for `discovery.config.js`. If you still using the legacy name, please refer to [this release note]() to update it.
 
     ```js mark=4
     experimental: {
