Apply suggestions from code review

--- a/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
+++ b/docs/faststore/docs/managing-performance/improving-store-performance-with-preact.mdx
@@ -20,7 +20,7 @@ Make sure the `@faststore/cli` package from your project is updated to the lates
 1. Open your FastStore project code.
 2. Go to `discovery.config.js` file and add the `preact` flag in the `experimental` section:
 
-> The `faststore.config.js` file is the legacy filename for `discovery.config.js`. If you still using the legacy name, please refer to [this release note]() to update it.
+> The `faststore.config.js` file is the legacy filename for `discovery.config.js`. If you still using the legacy name, please refer to [this release note](https://github.com/vtex/faststore/releases/tag/v3.0.123) to update it.
 
     ```js mark=4
     experimental: {
