--- a/docs/faststore/docs/sdk/analytics/use-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/use-analytics-event.mdx
@@ -1,5 +1,5 @@
 ---
-title: "`useAnalyticsEvent`"
+title: "useAnalyticsEvent"
 ---
 
 The `useAnalyticsEvent` hook intercepts both native and custom events triggered by the [`sendAnalyticsEvent`](/LINK) function. The hook automatically detects the events sent by [`sendAnalyticsEvent`](/LINK) and provides a response to them.
