--- a/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
+++ b/docs/faststore/docs/sdk/analytics/send-analytics-event.mdx
@@ -2,9 +2,9 @@
 title: "`sendAnalyticsEvent`"
 ---
 
-The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events /* remeber to add a link to 'custom events' once we have the following task done: https://vtex-dev.atlassian.net/browse/EDU-13545 */, serving as a centralized point for managing events.
+The `sendAnalyticsEvent` function triggers events in the browser, following the [Google Analytics 4 (GA4) data model](https://developers.google.com/analytics/devguides/collection/ga4/reference/events). This function is primarily used for ecommerce tracking but also supports custom events , serving as a centralized point for managing events
 
-
+/* remeber to add a link to 'custom events' once we have the following task done: https://vtex-dev.atlassian.net/browse/EDU-13545 */
 
 > ⚠️ `sendAnalyticsEvent` doesn't send events to any analytics provider. To intercept events triggered by this function, use the [`useAnalyticsEvent`](/LINK) hook.
 
